add example of loader thread, finsih sqlite database , (WIP) add Notification , Alert, Sound example

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,8 @@
         android:layout_height="wrap_content"
         android:text="Data Section"
         android:onClick="onClickDataSectionBtn"/>
+    
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
