--- a/app/src/main/res/layout/activity_learn_data_main.xml
+++ b/app/src/main/res/layout/activity_learn_data_main.xml
@@ -37,4 +37,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClickLearnUsingSQLIteActivity"/>
+
+    <Button
+        android:text="Learn using SQLite + Loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClickLearnUsingLoaderActivity"/>
 </LinearLayout>
