--- a/app/src/main/res/layout/activity_learn_using_loader.xml
+++ b/app/src/main/res/layout/activity_learn_using_loader.xml
@@ -8,6 +8,37 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hello.test.learnandroid.learndata.LearnUsingLoaderActivity">
+    tools:context="com.hello.test.learnandroid.learndata.LearnUsingSQLIteActivity"
+    android:background="@color/colorAccent">
+    <EditText
+        android:id="@+id/word"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:hint="type a word"/>
+    <EditText
+        android:id="@+id/definition"
+        android:layout_below="@id/word"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:hint="type a word definition"/>
+    <Button
+        android:id="@+id/button_add_update"
+        android:text="Save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"/>
 
+    <ListView
+        android:id="@+id/listView"
+        android:layout_below="@id/definition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
