--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,4 +52,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClickNotificationsAndAlerts"/>
+
+    <Button
+        android:layout_below="@id/notificationsAndAlerts"
+        android:id="@+id/touchScreenAndSensors"
+        android:text="Touchscreen and Sensors"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClickTouchScreenAndSensorsActivity"/>
 </RelativeLayout>
