--- a/app/src/main/res/layout/activity_touch_screen_and_sensors_main.xml
+++ b/app/src/main/res/layout/activity_touch_screen_and_sensors_main.xml
@@ -43,4 +43,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClickLearnReadingSensorDataActivity"/>
+
+    <Button
+        android:text="Reading Device Orientation Activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClickReadingDeviceOrientationActivity"/>
+
 </LinearLayout>
