--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,4 +60,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClickTouchScreenAndSensorsActivity"/>
+
+    <Button
+        android:layout_below="@id/touchScreenAndSensors"
+        android:onClick="onClickLearnGraphicAndAnimationMainActivity"
+        android:text="Learn Graphic And Animation Activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
