add example of Flip Card Activity

--- a/app/src/main/res/layout/activity_learn_graphic_and_animation.xml
+++ b/app/src/main/res/layout/activity_learn_graphic_and_animation.xml
@@ -31,4 +31,9 @@
         android:onClick="onClickLearnSimpleImageSliderActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:text="Flip Card Activity"
+        android:onClick="onClickFlipCardActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
