--- a/app/src/main/res/layout/activity_learn_graphic_and_animation.xml
+++ b/app/src/main/res/layout/activity_learn_graphic_and_animation.xml
@@ -36,4 +36,9 @@
         android:onClick="onClickFlipCardActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:text="Zoom and Animation With Custom Transition"
+        android:onClick="onClickZoomAnimationWithCustomTransitionActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
