--- a/app/src/main/res/values/timing.xml
+++ b/app/src/main/res/values/timing.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="card_flip_duration_full">1000</integer>
     <integer name="card_flip_duration_half">500</integer>
+    <integer name="config_shortAnimTime">10000</integer>
 </resources>
