--- a/app/src/main/res/layout/activity_learn_open_glmain.xml
+++ b/app/src/main/res/layout/activity_learn_open_glmain.xml
@@ -21,4 +21,9 @@
         android:onClick="onClickDrawSimpleShapeActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:text="Projection and Camera"
+        android:onClick="onClickProjectionAndCameraActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
