--- a/app/src/main/res/layout/activity_learn_open_glmain.xml
+++ b/app/src/main/res/layout/activity_learn_open_glmain.xml
@@ -26,4 +26,14 @@
         android:onClick="onClickProjectionAndCameraActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:text="Creating Movement Activity"
+        android:onClick="onClickCreatingMovementActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:text="Rotate Rectangle With User Input Activity"
+        android:onClick="onClickRotateRectangleWithUserInputActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
