--- a/app/src/main/res/layout/activity_multimedia_main.xml
+++ b/app/src/main/res/layout/activity_multimedia_main.xml
@@ -26,4 +26,14 @@
         android:onClick="onClickUsingDefaultCameraAppActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:text="Camera API Activity"
+        android:onClick="onClickCameraAPIActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:text="Camera 2 Activity"
+        android:onClick="onClickCamera2APIActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
