add Volley JSON and Cancel Request Example

--- a/app/src/main/res/layout/activity_telephony_network_and_web_main.xml
+++ b/app/src/main/res/layout/activity_telephony_network_and_web_main.xml
@@ -41,4 +41,14 @@
         android:onClick="onClickLearnVolleyLibraryActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:text="Volley With Cancel and Request connection"
+        android:onClick="onClickLearnVolleyWithCancelAndRequestConnectionActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:text="Volley JSON Request"
+        android:onClick="onClickVolleyRequestJSONActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
