--- a/app/src/main/res/layout/activity_telephony_network_and_web_main.xml
+++ b/app/src/main/res/layout/activity_telephony_network_and_web_main.xml
@@ -51,4 +51,9 @@
         android:onClick="onClickVolleyRequestJSONActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:text="Volley Image Request"
+        android:onClick="onClickVolleyImageRequestActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
