add NetworkImageView and LearnGoogleMaps Activity example :octocat: - note : if you want to use this example please use your own google API key

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,4 +92,12 @@
         android:layout_height="wrap_content"
         android:text="Telephony , Network, Web activity"
         android:onClick="onClickTelephonyNetworkAndWebMainActivity"/>
+
+    <Button
+        android:layout_below="@id/TelephonyNetworkAndWebMainActivityBtn"
+        android:id="@+id/LocationAndGeoFencingMainActivityBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Location , GeoFencing"
+        android:onClick="onClickLocationAndGeoFencingMainActivityBtn"/>
 </RelativeLayout>
