--- a/app/src/main/res/layout/activity_telephony_network_and_web_main.xml
+++ b/app/src/main/res/layout/activity_telephony_network_and_web_main.xml
@@ -56,4 +56,9 @@
         android:onClick="onClickVolleyImageRequestActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:text="NetworkImageView Activity"
+        android:onClick="onClickNetworkImageViewActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
