--- a/app/src/main/res/layout/activity_get_last_location.xml
+++ b/app/src/main/res/layout/activity_get_last_location.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/activity_location_and_geo_fencing_main"
+<RelativeLayout
+    android:id="@+id/activity_get_last_location"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hello.test.learnandroid.LocationAndGeoFencingMainActivity">
-    <Button
-        android:onClick="onClickLearnGoogleMapsActivity"
-        android:text="Try Google Maps Activity"
+    tools:context="com.hello.test.learnandroid.locationandgeofencing.GetLastLocationActivity">
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <Button
-        android:onClick="onClickGetLastLocationActivity"
-        android:text="last Location Activity"
+        android:id="@+id/button"
+        android:onClick="getLocation"
+        android:text="Get Location"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-</LinearLayout>
+</RelativeLayout>
